# ColognaKaraokeTauri

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml
crates/aligner-pipeline/: Cargo.toml
crates/aligner-pipeline/src/: lib.rs
crates/aligner-whisper/: Cargo.toml
crates/aligner-whisper/src/: dtw.rs  lib.rs  mel.rs  model.rs  normalize.rs
crates/aligner-whisper/tests/: regression.rs
scripts/: build-aligner.sh  build-whisper-apr.sh  fetch-binaries.sh  gen-test-fixtures.py
scripts/aligner/: aligner.py  aligner.spec
src/: App.jsx  jobsContext.jsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: aligner.rs  audio.rs  downloader.rs  jobs.rs  leaderboard.rs  lib.rs  library.rs  lyrics.rs  main.rs  metadata.rs  pipeline.rs  pitch.rs  recognizer.rs  recorder.rs  separator.rs  settings.rs  vad.rs
src/components/: Background.jsx  Sidebar.jsx
src/styles/: global.css  tokens.css
src/views/: Download.jsx  Leaderboard.jsx  Library.jsx  Player.jsx  Settings.jsx
test-assets/: fixtures.json
