[package]
name = "aligner-whisper"
version = "0.1.0"
edition = "2021"

[dependencies]
aligner-pipeline = { path = "../aligner-pipeline" }
candle-core = { version = "0.8" }
candle-nn = { version = "0.8" }
candle-transformers = { version = "0.8" }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", features = ["tokio"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
rustfft = "6"
dirs-next = "2"

[dev-dependencies]
hound = "3.5"
rubato = "0.15"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Enable Metal GPU on macOS; remove if targeting non-Apple hardware.
[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
